bk_ida/gccida/g3/find_reloads_subreg_address
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6218:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6226:4: error: expected ';' after expression
rtx v14; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6226:5: error: use of undeclared identifier 'v14'; did you mean 'v13'?
rtx v14; // r15 
    ^~~
    v13
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6225:5: note: 'v13' declared here
int v13; // r15d 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6227:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6227:5: error: use of undeclared identifier 'v15'; did you mean 'v13'?
rtx v15; // rax 
    ^~~
    v13
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6225:5: note: 'v13' declared here
int v13; // r15d 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6228:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6229:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6229:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6231:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6231:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6234:4: error: expected ';' after expression
rtx tem; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6234:5: error: use of undeclared identifier 'tem'; did you mean 'tee'?
rtx tem; // [rsp+18h] [rbp-40h] BYREF 
    ^~~
    tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6245:1: error: use of undeclared identifier 'tem'
tem = make_memloc( rtx, v13); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6246:1: error: use of undeclared identifier 'v14'
v14 = tem; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6246:7: error: use of undeclared identifier 'tem'; did you mean 'tee'?
v14 = tem; 
      ^~~
      tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6257:1: error: use of undeclared identifier 'tem'
tem = make_memloc( x->fld[0].rtx, v13); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6258:20: error: use of undeclared identifier 'tem'; did you mean 'tee'?
v20 = rtx_equal_p( tem, reg_equiv_mem[v21]); 
                   ^~~
                   tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6259:1: error: use of undeclared identifier 'result'
result = x; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/reload.c:6261:8: error: use of undeclared identifier 'result'
return result; 
       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_reloads_subreg_address/src/obj/reload.o] Error 1
